--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ nbformat==4.4.0
 networkx==2.1
 notebook==5.6.0
 numpy==1.15.0
-openfermion==0.8.2.dev0
+openfermion==0.9
 openfermionpsi4==0.4
 pandocfilters==1.4.2
 parso==0.3.1
